kubernetes/labs/modulo02-ContainerOrchestration/Security/Network_Policy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-app
  labels:
    namespace: my-app
spec: {}
status: {}
